Initial routing structure is added.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@configs/*": ["./src/app/configs/*"],
       "@core/*": ["src/app/core/*"],
+      "@configs/*": ["src/app/core/configs/*"],
+      "@layout/*": ["src/app/layout/*"],
       "@features/*": ["src/app/features/*"],
       "@shared/*": ["src/app/shared/*"],
       "@environment/*": ["src/environments/*"],
-      "@svg/*": ["./src/assets/svg/*"],
+      "@svg/*": ["src/assets/svg/*"],
     },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
