--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@angular-devkit/build-angular": "^14.1.2",
     "@angular/cli": "~14.1.2",
     "@angular/compiler-cli": "^14.1.0",
+    "@nrwl/angular": "^14.5.6",
+    "@nrwl/workspace": "14.5.6",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
@@ -33,6 +35,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "nx": "14.5.6",
     "typescript": "~4.7.2"
   }
 }
+
