--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve  --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ngrx/effects": "^14.2.0",
     "@ngrx/store": "^14.2.0",
+    "@ngrx/store-devtools": "^14.2.0",
     "angular-svg-icon": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -40,6 +42,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ngrx-store-freeze": "^0.2.4",
     "nx": "14.5.6",
     "typescript": "~4.7.2"
   }
